[package]
name = "virustotal"
version = "0.0.1"
authors = ["Minium2", "CbIpok"]
license = "MIT"
description = "VirusTotal command line client"
repository = "https://github.com/minium2/virustotal-client.git"
readme = "README.md"
keywords = ["rust", "virustotal"]

[dependencies]
reqwest = "0.9.22"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
colored = "1.9"
clap = "3.0.0-beta.1"

[profile.dev]
panic = "unwind"